--- a/static/styles.css
+++ b/static/styles.css
@@ -60,6 +60,16 @@ select, input[type=range], input[type=number]{
     gap: 15px;
 }
 
+/*.logo {*/
+/*    position: absolute;*/
+/*    top: 10px;*/
+/*    right: 10px;*/
+/*    width: 100px;*/
+/*    height: 100px;*/
+/*    object-fit: contain;*/
+/*    border-radius: 10px;*/
+/*}*/
+
 #status {
     margin-top: 20px;
     padding: 10px;
